--- a/src/App.css
+++ b/src/App.css
@@ -28,22 +28,23 @@ body {
   margin-bottom: 30px;
 }
 
-.logo {
+.logo a {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
   color: #68a2b9;
+  align-items: center;
   border: 5px solid #e9072b;
   border-radius: 50%;
   height: 115px;
   width: 115px;
   position: relative;
   background-color: #001628;
+  text-decoration: none;
 }
 
-.logo::before,
-.logo::after {
+.logo a::before,
+.logo a::after {
   content: "";
   position: absolute;
   height: 35px;
@@ -52,10 +53,10 @@ body {
   z-index: -1;
 }
 
-.logo::before {
+.logo a::before {
   top: 36px;
 }
-.logo::after {
+.logo a::after {
   bottom: 2px;
 }
 
