--- a/src/components/css/videoBackground.css
+++ b/src/components/css/videoBackground.css
@@ -6,7 +6,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: -3;
 }
 
 .wrapper::after {
@@ -18,4 +18,8 @@ body {
   left: 0;
   z-index: 0;
   position: absolute;
+}
+
+.video-bg {
+  width: 100%;
 }
