--- a/src/components/css/hero.css
+++ b/src/components/css/hero.css
@@ -1,13 +1,38 @@
+.main-container {
+  margin-top: 25%;
+}
+
 .hero-text-wrapper {
   display: grid;
   place-items: center;
-  width: 100%;
   height: 500px;
-  padding: 10px;
+  overflow: hidden;
 }
 .hero-title {
+  position: relative;
   font-size: 64px;
-  color: #e9072b;
+  color: transparent;
+  text-transform: uppercase;
+  opacity: 0;
+  transform: translateY(100px);
+  -webkit-text-stroke: 1px red;
+  transition: all 2s ease-in;
+}
+.hero-title::before {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  color: red;
+  transition: height 5s ease-in;
+  overflow: hidden;
+}
+.hero-title.animate {
   opacity: 1;
-  transition: opacity 2s ease-in;
+  transform: translateY(-200px);
+}
+.hero-title.animate::before {
+  height: 100%;
 }
