--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap");
+
 :root {
+  --level-one: translateZ(3rem);
+  --level-two: translateZ(4rem);
+  --level-three: translateZ(5rem);
+  --level-four: translatez(6rem);
+
   --kraken-red: #e9072b;
   --kraken-ice-blue: #99d9d9;
   --kraken-deep-sea-blue: #001628;
   --kraken-boundless-blue: #355464;
   --kraken-shadow-blue: #68a2b9;
 }
-* {
+
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+  margin: 0;
 }
 
 html,
