--- a/src/components/css/hero.css
+++ b/src/components/css/hero.css
@@ -10,7 +10,7 @@
 .hero-title {
   position: relative;
   font-size: 104px;
-  color: transparent;
+  color: var(--kraken-shadow-blue);
   text-transform: uppercase;
   opacity: 0;
   transform: translateY(100px);
@@ -21,21 +21,35 @@
 .hero-title::before {
   content: attr(data-text);
   position: absolute;
-  top: 0;
+  top: 108px;
   left: 0;
-  width: 100%;
-  height: 0;
-  color: var(--kraken-shadow-blue);
-  transition: height 5s ease-in 1s;
-  overflow: hidden;
+  transform: scale(1, -1);
+  z-index: 1;
+  opacity: 0;
+  transition: all 2s ease-in 0.5s;
 }
-
+.hero-title::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 170px;
+  top: 127px;
+  left: 0;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 22, 40, 0.8) 0%,
+    rgba(0, 3, 10, 1) 35%
+  );
+  z-index: 2;
+}
 .hero-title.animate {
   opacity: 1;
   transform: translateY(-200px);
 }
 
 .hero-title.animate::before {
+  opacity: 1;
   height: 100%;
 }
 
