--- a/src/components/css/videoBackground.css
+++ b/src/components/css/videoBackground.css
@@ -4,6 +4,7 @@ body {
 .wrapper {
   min-width: 100%;
   position: absolute;
+  top: 0;
   left: 0;
   z-index: -3;
 }
@@ -12,7 +13,7 @@ body {
   content: "";
   width: 100%;
   height: 150px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+  background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 45%);
   bottom: 0;
   left: 0;
   z-index: 0;
